fix greetings styles on mobile

--- a/src/components/Greetings/style.css
+++ b/src/components/Greetings/style.css
@@ -20,18 +20,22 @@
 	text-transform: uppercase;
 }
 
+.advert {
+	max-width: 400px;
+}
+
 .advert h2 {
 	font-size: 1.8em;
     line-height: 1.3;
-    border-bottom: thin solid;
-    padding: .7em 2em;
     margin: auto;
     display: inline;
 }
 
 .advert p {
-	padding: .8em 0;
+	border-top: thin solid;
 	font-size: 1.4em;
+	padding: 1em;
+	line-height: 1.2em;
 }
 
 .button {
